# django-test-data-migrations

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: publish.yml  pull_request.yml  workflow.yml
app_a/: models.py  tests.py
app_a/migrations/: 0001_initial.py  0002_appa_datafix_addsuffixtoname.py
django_test_data_migrations/: __init__.py  asgi.py  models.py  settings.py  unittest.py  urls.py  utils.py  wsgi.py
test_project/: settings.py
test_project/app_a/: apps.py
test_project/app_a/migrations/: 0002_datafix_addsuffixtoname.py
test_project/app_a/tests/: test_0002_datafix_addsuffixtoname.py
tests/: test_utils.py
